[tool.poetry]
name = "vysion"
version = "2.0.19"
description = "The official Python client library for Vysion"
homepage = "https://vysion.ai"
repository = "https://github.com/ByronLabs/vysion-py"
documentation = "https://developers.vysion.ai"
authors = [
  "Javier Junquera-Sánchez <javier.junquera@byronlabs.io>"
]
license = "Apache-2.0"
readme = "README.md"
classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent"
]
# packages = [vysion', 'vysion.client', 'vysion.model',  'vysion.dto', 'vysion.taxonomy'],

[tool.poetry.dependencies]
python = "^3.8.0"

pydantic = "^2.0.1"
softenum = "1.0.1"
requests = "^2.28.1"
pymisp = "^2.4.194"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
python-dotenv = "0.19.2"

flake8 = "4.0.1"
pyflakes = "2.4.0"
mypy = "^0.961"
black = "^24.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

